practica/semana4/actividad8/hello-kubernetes-second.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-second
spec:
  selector:
    matchLabels:
      app: demo-second
  template:
    metadata:
      labels:
        app: demo-second
    spec:
      containers:
      - name: demo-second
        image: andr35/miapp:v0.1.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: demo-second-service
spec:
  type: NodePort
  selector:
    app: demo-second
  ports:
  - port: 80
    targetPort: 3000
