practica/semana4/actividad8/hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "hw1.192.168.50.4.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo-first-service
            port: 
              number: 80

  - host: "hw2.192.168.50.4.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo-second-service
            port: 
              number: 80
